プロジェクト作成文書更新中

--- a/view/develop.html
+++ b/view/develop.html
@@ -57,6 +57,7 @@
                     <ul>
                         <li><a href="http://mergedoc.osdn.jp/" target="_blank">http://mergedoc.osdn.jp/</a></li>
                         <li>e-freakとしてはEclipse導入推奨というだけなので、自分に合ったのを利用すればOK</li>
+                        <li>慣れていればテキストエディタだけでも。</li>
                     </ul>
                 </ul>
             </section>
