プロジェクト作成文書修正

--- a/view/project.html
+++ b/view/project.html
@@ -78,20 +78,14 @@
             <section>
                 <h1 id="title-gulpfile">gulpfile作成</h1>
                 <ol>
-                    <li class="dotless">以下のファイルをローカルに保存し、ルートディレクトリ直下に配置する</li>
-                    <ul>
-                        <li class="dotless"><a href="../data/gulpfile.js">gulpfile (e-freak向け)</a></li>
-                    </ul>
+                    <li class="dotless">e-freakから取得した gulpfile.js をローカルに保存し、ルートディレクトリ直下に配置する</li>
                     <li class="dotless">※ ビルドスクリプトのようなもの</li>
                 </ol>
             </section>
             <section>
                 <h1 id="title-entry-point">エントリポイント作成</h1>
                 <ol>
-                    <li class="dotless">以下のファイルをローカルに保存し、ルートディレクトリ直下に配置する</li>
-                    <ul>
-                        <li class="dotless"><a href="../data/index.js">index.js (e-freak向け)</a></li>
-                    </ul>
+                    <li class="dotless">e-freakから取得した index.js をローカルに保存し、ルートディレクトリ直下に配置する</li>
                     <li class="dotless">※ 内容は適宜調整のこと</li>
                 </ol>
             </section>
