--- a/view/project.html
+++ b/view/project.html
@@ -154,7 +154,7 @@
                     <li>title.html をテキストエディタで開き、「Hello, World」とだけ書いて保存</li>
                     <li>ルートディレクトリで「electron [プロジェクト名]」を実行</li>
                     <ul>
-                        <li>よく使うことになるので、上記コマンドを記載したbatファイルでも作っておくと良い</li>
+                        <li>よく使うことになるので、上記コマンドを記載したbatファイルを作っておくと良い</li>
                     </ul>
                     <li>electronのウィンドウが表示されたら成功</li>
                     <li class="dotless"><img src="../image/sample01.png" alt="Hello, World" /></li>
