electronのパッケージ名修正

--- a/view/project.html
+++ b/view/project.html
@@ -62,7 +62,7 @@
                         <ul>
                             <li>ユニットテストで利用</li>
                         </ul>
-                        <li>npm --save-dev install electron-prebuilt</li>
+                        <li>npm --save-dev install electron</li>
                         <li>npm --save-dev install electron-packager</li>
                         <li>npm --save-dev install asar</li>
                         <ul>
