--- a/view/develop.html
+++ b/view/develop.html
@@ -17,6 +17,7 @@
                 <ul>
                     <li><a href="#title-git">Git導入</a></li>
                     <li><a href="#title-nodejs">Node.js導入</a></li>
+                    <li><a href="#title-electron">Electron導入</a></li>
                     <li><a href="#title-ide">IDE導入</a></li>
                 </ul>
             </section>
@@ -47,6 +48,21 @@
                     <ul>
                         <li><a href="http://nodejs.jp/nodejs.org_ja/" target="_blank">http://nodejs.jp/nodejs.org_ja/</a></li>
                         <li>「node -v」で導入確認</li>
+                    </ul>
+                </ul>
+            </section>
+            <section>
+                <h1 id="title-electron">Electron導入</h1>
+                <ul>
+                    <li>Electron</li>
+                    <ul>
+                        <li>コマンドプロンプトを開いて以下のコマンドを実行</li>
+                        <ul>
+                            <li>npm -g install electron</li>
+                            <li>npm -g install electron-packager</li>
+                            <li>npm -g install asar</li>
+                        </ul>
+                        <li>「electron -v」で導入確認</li>
                     </ul>
                 </ul>
             </section>
