--- a/view/rule-css.html
+++ b/view/rule-css.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8" />
         <title>CSSコーディングルール</title>
-        <link href="../css/default.css" rel="stylesheet" type="text/css" />
-        <link href="../css/rule.css" rel="stylesheet" type="text/css" />
+        <link rel="stylesheet" href="./css/default.css" />
+        <link rel="stylesheet" href="./css/rule.css" />
     </head>
     <body>
         <header>
