--- a/view/develop.html
+++ b/view/develop.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <title>環境構築</title>
-        <link href="../css/default.css" rel="stylesheet" type="text/css" />
+        <link rel="stylesheet" href="./css/default.css" />
     </head>
     <body>
         <header>
