browserifyの導入について修正

--- a/view/develop.html
+++ b/view/develop.html
@@ -61,6 +61,7 @@
                             <li>npm -g install electron</li>
                             <li>npm -g install electron-packager</li>
                             <li>npm -g install asar</li>
+                            <li>npm -g install browserify</li>
                         </ul>
                         <li>「electron -v」で導入確認</li>
                     </ul>
