--- a/view/transpile.html
+++ b/view/transpile.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <title>トランスパイル</title>
-        <link rel="stylesheet" href="./css/default.css" />
+        <link rel="stylesheet" href="../css/default.css" />
     </head>
     <body>
         <header>
