--- a/view/knowledge01.html
+++ b/view/knowledge01.html
@@ -32,7 +32,7 @@
                 <h1 id="title-02">HTMLにそのまま記載</h1>
                 <ul>
                     <li>HTMLでそれらしい機能が実現できるタグを調べてまずは書いてみる</li>
-                    <li>それぞれの領域は <strong>&lt;div&gt;</strong> タグで区切っておくと良い。</li>
+                    <li>それぞれの領域は <strong>&lt;div&gt;</strong> タグで区切っておくと良い</li>
                     <ul>
                         <li class="dotless">
                             <code>
