jsxを仕様しないように記載を変更

--- a/view/develop.html
+++ b/view/develop.html
@@ -18,7 +18,7 @@
                     <li><a href="#title-git">Git導入</a></li>
                     <li><a href="#title-nodejs">Node.js導入</a></li>
                     <li><a href="#title-electron">Electron導入</a></li>
-                    <li><a href="#title-ide">IDE導入</a></li>
+                    <li><a href="#title-editor">エディタ導入</a></li>
                 </ul>
             </section>
             <section>
@@ -61,20 +61,23 @@
                             <li>npm -g install electron</li>
                             <li>npm -g install electron-packager</li>
                             <li>npm -g install asar</li>
-                            <li>npm -g install browserify</li>
                         </ul>
                         <li>「electron -v」で導入確認</li>
                     </ul>
                 </ul>
             </section>
             <section>
-                <h1 id="title-ide">IDE導入</h1>
+                <h1 id="title-editor">エディタ導入</h1>
                 <ul>
+                    <li>VSCode</li>
+                    <ul>
+                        <li><a href="https://code.visualstudio.com/" target="_blank">https://code.visualstudio.com/</a></li>
+                        <li>おすすめの軽量エディタ</li>
+                    </ul>
                     <li>Eclipse</li>
                     <ul>
                         <li><a href="http://mergedoc.osdn.jp/" target="_blank">http://mergedoc.osdn.jp/</a></li>
-                        <li>e-freakとしてはEclipse導入推奨というだけなので、自分に合ったのを利用すればOK</li>
-                        <li>慣れていればテキストエディタだけでも。</li>
+                        <li>多言語と統合で環境を作りたい場合に</li>
                     </ul>
                 </ul>
             </section>
