--- a/view/knowledge02.html
+++ b/view/knowledge02.html
@@ -67,7 +67,7 @@
             <section>
                 <h1 id="title-02">イベントリスナの登録</h1>
                 <ol>
-                    <li>src/main/jsx に、sample-view-controller.jsx を作成する</li>
+                    <li>src/main/js に、sample-view-controller.js を作成する</li>
                     <ul>
                         <li><a href="./develop.html">プロジェクト作成</a>に記載の通りにディレクトリとgulpfileを作成していることが前提</li>
                     </ul>
@@ -123,7 +123,7 @@
                         <hr class="file-separator" />
                         <li class="dotless">
                             <code>
-                                <span class="code-comment">// sample-view-controller-loder.jsx</span><br />
+                                <span class="code-comment">// sample-view-controller-loder.js</span><br />
                                 import SampleViewController from '../controller/sample-view-controller';<br />
                                 <br />
                                 global.window.addEventListener('DOMContentLoaded', () => {<br />
@@ -135,7 +135,7 @@
                         <hr class="file-separator" />
                         <li class="dotless">
                             <code>
-                                <span class="code-comment">// sample-view-controller.jsx</span><br />
+                                <span class="code-comment">// sample-view-controller.js</span><br />
                                 export default class SampleViewController {<br />
                                 &nbsp;&nbsp;&nbsp;&nbsp;constructor(view) {<br />
                                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;this._view = view;<br />
