--- a/view/project.html
+++ b/view/project.html
@@ -49,7 +49,6 @@
                     <ul>
                         <li>npm --save-dev install gulp</li>
                         <li>npm --save-dev install gulp-babel@5.3.0</li>
-                        <li>npm --save-dev install gulp-load-plugins</li>
                         <li>npm --save-dev install gulp-util</li>
                         <li>npm --save-dev install through2</li>
                         <ul>
@@ -120,20 +119,20 @@
                             <ul class="marginless">
                                 <li class="directory-icon">main</li>
                                 <ul class="marginless">
-                                    <li class="directory-icon">jsx</li>
+                                    <li class="directory-icon">js</li>
                                     <ul class="marginless">
-                                        <li class="file-icon">aaa.jsx</li>
-                                        <li class="file-icon">bbb.jsx</li>
-                                        <li class="file-icon">ccc.jsx</li>
+                                        <li class="file-icon">aaa.js</li>
+                                        <li class="file-icon">bbb.js</li>
+                                        <li class="file-icon">ccc.js</li>
                                     </ul>
                                 </ul>
                                 <li class="directory-icon">test</li>
                                 <ul class="marginless">
-                                    <li class="directory-icon">jsx</li>
+                                    <li class="directory-icon">js</li>
                                     <ul class="marginless">
-                                        <li class="file-icon">aaa-test.jsx</li>
-                                        <li class="file-icon">bbb-test.jsx</li>
-                                        <li class="file-icon">ccc-test.jsx</li>
+                                        <li class="file-icon">aaa-test.js</li>
+                                        <li class="file-icon">bbb-test.js</li>
+                                        <li class="file-icon">ccc-test.js</li>
                                     </ul>
                                 </ul>
                             </ul>
